# project_mini_collecting_bot

./: .gitignore  execute.ipynb  main.py  pyproject.toml
HRD/: api_libs.py  api_process.py  hrd_crawling.py  hrd_institution_info.py  hrd_training_info.py  init.py  open_api_institution_info.py  open_api_training_info.py  open_api_training_list.py
common/: const.py  libs.py
crawler/: .dockerignore  Dockerfile  cron  date_range.json  error_logging.json  main.py  requirements.txt  scripts.sh
crawler/src/common/: const.py  get_date.py
crawler/src/db/: equipment_crud.py  facility_crud.py  institution_crud.py  training_crud.py
crawler/src/lib/: training_list.py
crawler/src/models/: article.py  equipment.py  facility.py  institution.py  training.py
deprecated/HRD/: api_libs.py  hrd_institution_info.py  hrd_training_info.py  open_api_institution_info.py
deprecated/common/: libs.py  url.py
workingon/: cron  do.txt  docker-compose.yml  error_logging.json  main.py
workingon/src/common/: common.py
workingon/src/db/: db.py  facility_crud.py  institution_crud.py  training_crud.py
workingon/src/lib/: institution_info.py  training_list.py
workingon/src/models/: equipment.py  training.py
